--- a/ui/style.css
+++ b/ui/style.css
@@ -1,7 +1,7 @@
 body {
     font-family: sans-serif;
-    background-color: lightgrey;
-    margin-top: 75px;
+    background-color: blue;
+    margin-top: 180px;
 }
 
 .center {
@@ -9,7 +9,7 @@ body {
 }
 
 .text-big {
-    font-size: 300%;
+    font-size: 350%;
 }
 
 .bold {
@@ -17,7 +17,7 @@ body {
 }
 
 .img-medium {
-    height: 200px;
+    height: 300px;
 }
 .conatiner{
     max-width:800px;
